--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -3,7 +3,7 @@
   <head></head>
   <body style="font-size:20px; padding:50px;">
     <% include ../partials/header %>
-    <form action="/urls/new" method="POST" style="margin:150px;">
+    <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL to add to our database:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
