--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
       <a class="navbar-brand" href="#">Brand</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/urls">Home</a></li>
+      <li><a href="/urls/new">Add URL</a></li>
     </ul>
   </div>
 </nav>
