--- a/views/pages/urls_show.ejs
+++ b/views/pages/urls_show.ejs
@@ -8,6 +8,11 @@
 <% include ../partials/header %>
 <p><%= shortURL %></p>
 <p><%= longURL %></p>
+<form action="/urls/<%= shortURL%>" method="POST" style="margin:150px;">
+      <label for="longURL">Enter a new long URL for it:</label>
+      <input id="longURL" type="text" name="longURL">
+      <input type="submit" value="Update">
+</form>
 <% include ../partials/footer %>
 </body>
 </html>
