--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <% include ../partials/head %>
+  <% include ../partials/_head %>
 </head>
 <body class="container">
 
   <header>
-    <% include ../partials/header %>
+    <% include ../partials/_header %>
   </header>
 
   <main>
@@ -24,7 +24,7 @@
   </ul>
 
   <footer>
-    <% include ../partials/footer %>
+    <% include ../partials/_footer %>
   </footer>
 
 </body>
