--- a/views/pages/urls_index.ejs
+++ b/views/pages/urls_index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <% include ../partials/head %>
+  <% include ../partials/_head %>
   <title>TinyApp</title>
 </head>
 <body>
-<% include ../partials/header %>
+<% include ../partials/_header %>
 <h2>All URLs</h2>
 <ul>
   <% Object.keys(urls).forEach(function(key,index){%>
@@ -19,6 +19,6 @@
     </li>
   <%});%>
 </ul>
-<% include ../partials/footer %>
+<% include ../partials/_footer %>
 </body>
 </html>
