--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <% include ../partials/_head %>
+    <title>TinyApp Add New URL</title>
+  </head>
   <body style="font-size:20px; padding:50px;">
-    <% include ../partials/header %>
+    <% include ../partials/_header %>
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL to add to our database:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
+    <% include ../partials/_footer %>
   </body>
 </html>
