--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,6 +3,12 @@
     <ul class="nav navbar-nav">
       <li><a href="/urls">Home</a></li>
       <li><a href="/urls/new">Add URL</a></li>
+      <li>
+        <form action="/login" method="POST">
+          <input id="name" type="text" name="name" placeholder="your user name" style="width: 300px margin: 45px">
+          <input type="submit" value="Login">
+        </form>
+      </li>
     </ul>
   </div>
 </nav>
