--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -8,7 +8,7 @@
     <% include ../partials/_header %>
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL to add to our database:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+      <input id="longURL" type="text" name="longURL" value="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
     <% include ../partials/_footer %>
