registration half done

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,11 @@
       <% } else{ %>
         <li>NOTLOGGEDIN</li>
       <% } %>
+      <li>
+        <form action="/user_registration" method="GET">
+          <input type="submit" value="Register New">
+        </form>
+      </li>
     </ul>
   </div>
 </nav>
