--- a/views/pages/user_registration.ejs
+++ b/views/pages/user_registration.ejs
@@ -11,7 +11,7 @@
       <input id="email" type="email" name="email" style="width: 300px">
       <label for="password">Enter your password:</label>
       <input id="password" type="password" name="password" style="width: 300px">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Register">
     </form>
     <% include ../partials/_footer %>
   </body>
