--- a/views/pages/urls_new.ejs
+++ b/views/pages/urls_new.ejs
@@ -6,7 +6,7 @@
   </head>
   <body style="font-size:20px; padding:50px;">
     <% include ../partials/_header %>
-    <form action="/urls" method="POST" style="margin:150px;">
+    <form action="/urls/new" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL to add to our database:</label>
       <input id="longURL" type="text" name="longURL" value="http://" style="width: 300px">
       <input type="submit" value="Submit">
