--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,11 +2,12 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li><a href="/urls">Home</a></li>
+      <li><a href="/">Existing Short URLs</a></li>
       <li><a href="/urls/new">Add URL</a></li>
       <li><a href="/login">Log In</a></li>
       <li><a href="/user_registration">Register</a></li>
       <% if (user.email!==undefined) { %>
-        <li>Logged In as<li>
+        <li>Logged In as :<li>
         <li><%= user.email%></li>
         <form action="/logout" method="POST">
           <input type="submit" value="Logout">
