--- a/views/pages/user_registration.ejs
+++ b/views/pages/user_registration.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <% include ../partials/_head %>
-    <title>user registration</title>
+    <title>User Registration</title>
   </head>
   <body style="font-size:20px; padding:50px;">
     <% include ../partials/_header %>
