--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
-      <li><a href="/urls">Home</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/urls">Your Profile</a>
       <li><a href="/urls/new">Add URL</a></li>
       <li><a href="/login">Log In</a></li>
       <li><a href="/user_registration">Register</a></li>
@@ -12,7 +13,7 @@
           <input type="submit" value="Logout">
         </form>
       <% } else{ %>
-        <li>NOTLOGGEDIN</li>
+        <li>NOT LOGGED IN</li>
       <% } %>
     </ul>
   </div>
